Code cleanup, make some utilities publicly available so as to not make it un-readable, still struggling with initial password checks after password saved