@@ -5,21 +5,25 @@ import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.*;
 import java.net.InetAddress;
+import java.net.UnknownHostException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.InvalidKeyException;
 import java.security.Key;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.KeySpec;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 public class FileManager {
     public String path;
     private Key key;
 
     // Create file
-    public void createFile() throws IOException, NoSuchPaddingException, IllegalBlockSizeException, NoSuchAlgorithmException, BadPaddingException, InvalidKeyException {
+    public void create() throws IOException {
         File file = new File("Sentry.txt");
 
         if (file.exists()) return;
@@ -27,36 +31,50 @@ public class FileManager {
         file.createNewFile();
     }
 
+    // Write in the file
+    public void write(String input) throws IOException {
+        File file = new File("Sentry.txt");
+
+        FileOutputStream IStream = new FileOutputStream(file);
+
+        IStream.write(input.getBytes());
+    }
+
     // Read existing file
-    public String readFile() throws IOException {
-        BufferedReader reader;
-        reader = new BufferedReader(new FileReader("Sentry.txt"));
+    public String read() throws IOException {
+        BufferedReader reader = new BufferedReader(new FileReader("Sentry.txt"));
         String line;
+
         while ((line = reader.readLine()) != null) {
             return line;
         }
+
         reader.close();
 
         return "";
     }
 
     // Check if user has password or not
-    public void checkPassword() {
-        String pass;
+    public boolean passKey(String masterKey, String salt) throws NoSuchPaddingException, IllegalBlockSizeException, IOException, NoSuchAlgorithmException, BadPaddingException, InvalidKeyException, InvalidKeySpecException {
+        key = Utils.generateKey(masterKey, Main.salt);
+        for (String line : decipher()) {
+             if (line.contains("masterkey:")) {
+                 int passLength = line.length() - 10;
+
+                 return Objects.equals(masterKey, line.substring(10));
+             }
+         }
+
+        return false;
     }
 
     // Encrypt created file
-    public void saveFile(String password, String Salt) throws IOException, NoSuchAlgorithmException, InvalidKeySpecException, NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException {
+    public void saveFile(String file,String password, String Salt) throws IOException, NoSuchAlgorithmException, InvalidKeySpecException, NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException {
         // Read in bytes
-        byte[] pTxt = Files.readAllBytes(Paths.get(readFile()));
+        byte[] pTxt = Files.readAllBytes(Path.of(file));
 
         // Generate a key
-        byte[] salt =  (Salt + System.getProperty("os.name") + System.getProperty("user.name") + InetAddress.getLocalHost().getHostName()).getBytes();
-        SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA256");
-        KeySpec spec = new PBEKeySpec(password.toCharArray(), salt, 65536, 256);
-        SecretKey tmp = factory.generateSecret(spec);
-        SecretKey secret = new SecretKeySpec(tmp.getEncoded(), "AES");
-        key = secret;
+        Key secret = Utils.generateKey(password, Salt);
 
         // Encrypt the file
         Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
@@ -67,12 +85,14 @@ public class FileManager {
         Files.write(Paths.get("Sentry.txt"), encryptedText);
     }
 
-    public List<byte[]> decipher() throws IOException, NoSuchPaddingException, NoSuchAlgorithmException, IllegalBlockSizeException, BadPaddingException, InvalidKeyException {
+    public List<String> decipher() throws IOException, NoSuchPaddingException, NoSuchAlgorithmException, IllegalBlockSizeException, BadPaddingException, InvalidKeyException, InvalidKeySpecException {
         Cipher cipher = Cipher.getInstance("AES");
         cipher.init(Cipher.DECRYPT_MODE, key);
 
-        byte[] fileBytes = Files.readAllBytes(new File(readFile()).toPath());
-        byte[] decryptedBytes = cipher.doFinal(fileBytes);
+        byte[] fileBytes = Files.readAllBytes(new File(read()).toPath());
+        String[] decryptedBytes = new String[]{Arrays.toString(cipher.doFinal(fileBytes))};
+
+        System.out.println(Arrays.toString(decryptedBytes));
 
         return List.of(decryptedBytes);
     }
